--- a/style.css
+++ b/style.css
@@ -146,20 +146,32 @@ header {
     max-width: 40%; /* Add a subtle shadow */
 }
 
+/* Style for the container on the 'formules' page */
+.body-Formules .container {
+    display: flex; /* Use Flexbox to align children */
+    justify-content: space-between; /* Add space between the children */
+    padding: 20px; /* Add padding to the container */
+    box-sizing: border-box; /* Include padding in the element's total width and height */
+}
+
 /* Style for the left container on the 'formules' page */
 .body-Formules .left {
-    width: 50%; /* Occupies half of the body */
-    float: left; /* Aligns it to the right */
-    padding: 100px; /* Add padding for spacing */
+    width: 48%; /* Occupies almost half of the container */
+    padding: 20px; /* Add padding for spacing */
     box-sizing: border-box; /* Include padding in the element's total width and height */
+    background-color: rgba(0, 0, 0, 0.5); /* Background color */
+    border: 2px solid white; /* Add a white border */
+    color: white;
 }
 
 /* Style for the right container on the 'formules' page */
 .body-Formules .right {
-    width: 50%; /* Occupies half of the body */
-    float: right; /* Aligns it to the right */
-    padding: 100px; /* Add padding for spacing */
+    width: 48%; /* Occupies almost half of the container */
+    padding: 20px; /* Add padding for spacing */
     box-sizing: border-box; /* Include padding in the element's total width and height */
+    background-color: rgba(0, 0, 0, 0.5); /* Background color */
+    border: 2px solid white; /* Add a white border */
+    color: white;
 }
 
 /* Style for the footer */
