--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ header {
     background-color: rgba(0, 0, 0, 0.5); /* Background color */
     border: 2px solid white; /* Add a white border */
     color: white;
+    border-radius: 10px;
 }
 
 /* Style for the right container on the 'formules' page */
@@ -172,6 +173,7 @@ header {
     background-color: rgba(0, 0, 0, 0.5); /* Background color */
     border: 2px solid white; /* Add a white border */
     color: white;
+    border-radius: 10px;
 }
 
 /* Style for the footer */
