--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ header {
     position: fixed;
     top: 150px;
     margin-left: 3%;
-    max-width: 80%;
+    max-width: 50%;
     width: 100%;
     display: flex;
     justify-content: center; /* Center the content horizontally */
@@ -120,15 +120,15 @@ header {
 
 /* Specific header style for the 'Accueil' page */
 .body-Accueil header {
-    top: 150px; /* Adjust the top position */
+    top: 12vh; /* Adjust the top position */
     background-color: rgba(0, 0, 0, 0.5); /* Add a semi-transparent background */
     color: white; /* Change text color to white */
     padding: 10px 20px; /* Add padding */
     border-radius: 10px; /* Add rounded corners */
     border: 2px solid white; /* Add a white border */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
-    max-width: 80%; /* Reduce the width of the box around the h1 */
-    margin-left: 3%; /* Center the box horizontally */
+    max-width: 50%; /* Reduce the width of the box around the h1 */
+    margin-left: 0%; /* Center the box horizontally */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -136,14 +136,15 @@ header {
 }
 
 .body-Formules header {
-    top: 300px; /* Adjust the top position */
+    top: 12vh; /* Adjust the top position */
     background-color: rgba(0, 0, 0, 0.5); /* Add a semi-transparent background */
     color: white; /* Change text color to white */
     padding: 20px; /* Add padding */
     border-radius: 10px; /* Add rounded corners */
+    margin-left: 0%; /* Center the box horizontally */
     border: 2px solid white; /* Add a white border */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    max-width: 40%; /* Add a subtle shadow */
+    max-width: 50%; /* Add a subtle shadow */
 }
 
 /* Style for the container on the 'formules' page */
