--- a/style.css
+++ b/style.css
@@ -101,9 +101,10 @@ h1 {
 /* Style du header*/
 header {
     position: fixed;
-    top: 150px;
+    top: 12vh;
     margin-left: 3%;
     max-width: 50%;
+    max-height: 20%;
     width: 100%;
     display: flex;
     justify-content: center; /* Center the content horizontally */
@@ -128,6 +129,7 @@ header {
     border: 2px solid white; /* Add a white border */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
     max-width: 50%; /* Reduce the width of the box around the h1 */
+    max-height: 20%;
     margin-left: 0%; /* Center the box horizontally */
     display: flex;
     justify-content: center;
@@ -145,10 +147,29 @@ header {
     border: 2px solid white; /* Add a white border */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     max-width: 50%; /* Add a subtle shadow */
+    max-height: 20%;
 }
 
+.body-Lieux header {
+    top: 12vh; /* Adjust the top position */
+    background-color: rgba(0, 0, 0, 0.5); /* Add a semi-transparent background */
+    color: white; /* Change text color to white */
+    padding: 10px 20px; /* Add padding */
+    border-radius: 10px; /* Add rounded corners */
+    border: 2px solid white; /* Add a white border */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
+    max-width: 50%; /* Reduce the width of the box around the h1 */
+    max-height: 20%;
+    margin-left: 0%; /* Center the box horizontally */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+
 /* Style for the container on the 'formules' page */
-.body-Formules .container {
+.container {
     display: flex; /* Use Flexbox to align children */
     justify-content: space-between; /* Add space between the children */
     padding: 20px; /* Add padding to the container */
