--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 20px 0;
+    margin: 2vh 0;
     font-weight: 600;
     font-size: 18px;
     background-color: #154517;
@@ -225,8 +225,12 @@ footer {
     color: white;
 }
 
+footer p {
+    margin: 0 1vw; /* Add margin between text and links */
+}
+
 footer a {
     color: white; /* White text */
     text-decoration: none; /* Remove underline */
-    margin: 0 10px; /* Add margin between links */
+    margin: 0 1vw; /* Add margin between links */
 }
