--- a/style.css
+++ b/style.css
@@ -175,6 +175,7 @@ header {
     padding: 20px; /* Add padding to the container */
     box-sizing: border-box; /* Include padding in the element's total width and height */
     gap: 2%; /* Add a gap between the children */
+    padding-top: 6vh; /* Add padding to the top of the container */
 }
 
 #container {
@@ -188,7 +189,7 @@ header {
 /* Style for the left container on the 'formules' page */
 .body-Formules .left {
     flex: 1; /* Allow the left container to grow */
-    padding: 20px; /* Add padding for spacing */
+    padding: 2vh 7.85vw; /* Add padding for spacing */
     box-sizing: border-box; /* Include padding in the element's total width and height */
     background-color: rgba(0, 0, 0, 0.5); /* Background color */
     border: 2px solid white; /* Add a white border */
@@ -200,7 +201,7 @@ header {
 /* Style for the right container on the 'formules' page */
 .body-Formules .right {
     flex: 1; /* Allow the right container to grow */
-    padding: 20px; /* Add padding for spacing */
+    padding: 2vh 7.85vw; /* Add padding for spacing */
     box-sizing: border-box; /* Include padding in the element's total width and height */
     background-color: rgba(0, 0, 0, 0.5); /* Background color */
     border: 2px solid white; /* Add a white border */
