--- a/style.css
+++ b/style.css
@@ -178,6 +178,10 @@ header {
     padding-top: 6vh; /* Add padding to the top of the container */
 }
 
+.body-Formules .container {
+    margin-top: 15vh; /* Add space between the header and the container using vh units */
+}
+
 #container {
     grid-template-areas: "left right"; /* Define the grid layout */
     display: grid; /* Use CSS Grid for layout */
